<resources>
    <string name="app_name" translatable="false">Credse Merchant</string>
    <string name="credse" translatable="false">Credse</string>
    <string name="made_in_india_with">Made in India with</string>
    <string name="permissions">Permissions</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="storage_permission">Storage permission</string>
    <string name="camera_permission">Camera permission</string>
    <string name="user_info_permission">User info permission</string>
    <string name="storage">Storage</string>
    <string name="get_start_storage_permission">Need storage permission to access application feature\'s and  download financial documents from in this app</string>
    <string name="camera">Camera</string>
    <string name="get_start_camera_permission">Purpose for app user use the camera feature for update profile picture and cover picture.</string>
    <string name="user_information">User information</string>
    <string name="get_start_user_info_permission">We collect your personal data such as mobile no, country , region, gender, age, our application searching history for providing better use.</string>
    <string name="continue_">Continue</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="log_in">LOG IN</string>
    <string name="search_brands_smart_phones_headset_cloths">Search Name (or) Mobile Number</string>
    <string name="grow_your_nbusiness_nwith_us">Grow your \nbusiness \nwith us</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_no">Mobile No</string>
    <string name="phone_number">Phone number</string>
    <string name="profile_picture">Profile picture</string>
    <string name="welcome">Welcome</string>
    <string name="icons" translatable="false">icons</string>
    <string name="bfsi">BFSI</string>
    <string name="solo_proprietorship">solo proprietorship</string>
    <string name="our_products">Our products</string>
    <string name="company">Company</string>
    <string name="company_gateway">Company Gateway</string>
    <string name="contacts">Contacts</string>
    <string name="business_area">Business area</string>
    <string name="management">Management</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="credse_bill_payments_private_limited" translatable="false">Credse Bill Payments private limited</string>
    <string name="about_the_app">About the app</string>
    <string name="get_started">Get started</string>
    <string name="enter_mobile_number_to_get_otp">Enter mobile number to get OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="add_contacts">ADD CONTACTS</string>
    <string name="login">LOGIN</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="text1" translatable="false">Address 635b, 5th Main Road, Ramnagar South, Madipakkam, Madipakkam, Sholinganallur, Kanchipuram, Tamil Nadu, India - 600091</string>
    <string name="aadhar_verification">Aadhar verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_received_on_customer_s_aadhar_registered_mobile_number_and_click_on_submit_button_to_validate_customer_s_identity_as_per_aadhar_database">Enter the OTP received on Customer \'s Aadhar registered mobile Number and click on SUBMIT button to validate customer\'s identity as per Aadhar Database</string>
    <string name="submit">Submit</string>
    <string name="re_send_otp_in_10_seconds">Re-send OTP in 10 seconds</string>
    <string name="register">Register</string>
    <string name="mobile_registration">Mobile Registration</string>
    <string name="enter_mobile_no">Enter mobile no</string>
    <string name="auto_read_otp">Auto read OTP</string>
    <string name="otp_not_received">OTP Not received?</string>
    <string name="_30_seconds">30 Seconds</string>
    <string name="device_registration">Device registration</string>
    <string name="enter_access_token">Enter access token</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="setup_passcode">Setup Passcode</string>
    <string name="into_your_account">into your account</string>
    <string name="all_contacts">All Contacts</string>
    <string name="profile">Profile</string>
    <string name="my_company">My company</string>
    <string name="wallet_satements">Wallet satements</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="update_login_passcode">Update Login Passcode</string>
    <string name="c_o" translatable="false">C/O</string>
    <string name="sole_proprietorship">Sole Proprietorship</string>
    <string name="meaning">Meaning</string>
    <string name="sole_proprietorship_as_defined_by_the_govt_of_india_is_a_one_man_organization_where_a_single_individual_owns_manages_and_controls_the_business_there_is_no_legal_distinction_between_the_owner_and_the_business_entity_the_sole_proprietor_is_not_a_legal_entity_it_simply_refers_to_a_person_who_owns_the_business">Sole Proprietorship, as defined by the Govt. Of India, is a “one-man organization where a single individual owns, manages and controls the business”. There is no legal distinction between the owner and the business entity. The sole proprietor is not a legal entity. It simply refers to a person who owns the business.</string>
    <string name="business_incorporation">Business Incorporation</string>
    <string name="the_sole_proprietorship_is_a_popular_business_form_due_to_its_simplicity_ease_of_setup_and_nominal_cost_a_sole_proprietor_is_not_required_to_go_through_elaborate_legal_formalities_no_agreement_is_to_be_made_and_registration_of_the_firm_is_also_not_essential_however_the_owner_may_be_required_to_obtain_a_license_specific_to_the_line_of_business_from_the_local_administration">The Sole Proprietorship is a popular business form due to its simplicity, ease of setup, and nominal cost. A sole proprietor is not required to go through elaborate legal formalities. No agreement is to be made and registration of the firm is also not essential. However, the owner may be required to obtain a license specific to the line of business from the local administration.</string>
    <string name="government_registrations">Government Registrations</string>
    <string name="a_sole_proprietorship_business_like_any_other_form_of_business_has_to_necessarily_register_on_various_government_departments_and_programs_and_follow_all_the_rules_and_regulations_regulations_amended_by_the_law_on_timely_basis_as_and_when_they_become_eligible_or_meet_the_criteria_of_such_laws_further_registration_on_such_government_programs_enables_the_proprietor_to_avail_various_benefits_and_subsidies_provided_by_government_under_such_laws_n_n_some_of_the_major_laws_or_programs_that_every_entrepreneur_should_be_aware_of_are">A Sole Proprietorship business like any other form of business has to necessarily register on various government departments and programs and follow all the rules and regulations regulations amended by the law on timely basis as and when they become eligible or meet the criteria of such laws. Further registration on such government programs enables the proprietor to avail various benefits and subsidies provided by government under such laws. \n \n Some of the Major Laws or Programs that every entrepreneur should be aware of are:</string>
    <string name="_1_income_tax_laws">1, Income Tax Laws</string>
    <string name="_2_goods_and_service_tax">2, Goods and Service Tax</string>
    <string name="_3_shop_amp_1_establishment_laws"><![CDATA[3, Shop & Establishment Laws]]></string>
    <string name="_4_professional_tax_under_municipal_laws">4, Professional Tax under Municipal Laws</string>
    <string name="_5_legal_metrology_laws">5, Legal Metrology Laws</string>
    <string name="_6_legal_metrology_laws">6, Legal Metrology Laws</string>
    <string name="_7_1_ssi_msme_laws_amp_schemes"><![CDATA[7, SSI/MSME Laws & Schemes]]></string>
    <string name="legal_amp_trade_business_name"><![CDATA[Legal & Trade/Business Name]]></string>
    <string name="the_legal_name_of_any_sole_proprietorship_business_is_the_name_of_its_owner_as_given_in_the_pan_database_sole_proprietors_can_do_business_under_their_own_names_because_creating_a_separate_business_or_trade_name_isn_t_necessary_a_sole_proprietor_may_however_use_a_trade_name_or_business_name_other_than_their_or_its_legal_name_they_may_have_to_legally_trademark_their_business_name_if_it_differs_from_their_own_legal_name_if_required">The Legal Name of any Sole Proprietorship Business is the name of its owner as given in the PAN Database. Sole proprietors can do business under their own names because creating a separate business or trade name isn’t necessary. A sole proprietor may however use a trade name or business name other than their or its legal name. They may have to legally trademark their business name if it differs from their own legal name if required.</string>
    <string name="investment_amp_capital"><![CDATA[Investment & Capital]]></string>
    <string name="there_are_no_minimum_capital_investment_requirements_for_a_sole_proprietorship_as_sole_proprietorships_are_not_considered_business_entities_that_are_separate_from_its_owner_the_funds_received_from_lenders_or_investors_are_treated_as_personal_use_requests_although_the_funds_acquired_from_these_sources_are_used_for_business_purposes">There are no minimum capital investment requirements for a sole proprietorship. As sole proprietorships are not considered business entities that are separate from its owner the funds received from lenders or Investors are treated as personal use requests, although the funds acquired from these sources are used for business purposes.</string>
    <string name="taxation">Taxation</string>
    <string name="because_a_sole_proprietorship_is_indistinguishable_from_its_owner_sole_proprietorship_taxation_is_quite_simple_the_income_earned_by_a_sole_proprietorship_is_income_earned_by_its_owner">Because a sole proprietorship is indistinguishable from its owner, sole proprietorship taxation is quite simple. The income earned by a sole proprietorship is income earned by its owner.</string>
    <string name="work_conditions">Work Conditions</string>
    <string name="a_sole_trader_does_not_necessarily_work_alone_it_is_possible_for_the_sole_trader_to_employ_other_people">A sole trader does not necessarily work \'alone\'—it is possible for the sole trader to employ other people</string>
    <string name="community">Community</string>
    <string name="captured_image_view">Captured image view</string>
    <string name="flash_button">Flash button</string>
    <string name="switch_camera_button">Switch camera button</string>
    <string name="retry">RETRY</string>
    <string name="camera_button">Camera button</string>
    <string name="general_settings">General settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="choose_theme">Choose theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>