<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChooseLanguageActivity"
        android:background="@color/backgroundColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choose_language"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/eng"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_welcome_btn"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/english"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/tamil"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_welcome_btn"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tamil"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/hi"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_welcome_btn"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/hindi"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>