<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activity.settings.Display">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="20dp"
        android:background="@color/backgroundColor">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:tint="@color/textColor" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="sans-serif-medium"
            android:text="@string/display_settings"
            android:textColor="@color/textColor"
            android:textSize="20sp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/id_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/list_divider"
        android:dividerHeight="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="60dp" >

        <RelativeLayout
            android:id="@+id/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTheme"
            android:background="@drawable/button_click_default"
            android:padding="8dp">

            <ImageView
                android:id="@+id/my_channel_img"
                android:src="@drawable/ic_theme"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/general_settings"
                app:tint="@color/textLightColor"/>

            <TextView
                android:id="@+id/my_channel_main_text"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/my_channel_img"
                android:fontFamily="@font/ubuntu_medium"
                android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/theme"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:layout_width="wrap_content" />

            <TextView
                android:id="@+id/my_channel_des_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_channel_main_text"
                android:layout_alignStart="@+id/my_channel_main_text"
                android:maxLines="1"
                android:text="@string/system_default"
                android:layout_marginTop="2dp"
                android:textColor="@color/textLightColor"
                android:fontFamily="sans-serif"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>