<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/black"
tools:context=".CameraX">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:elevation="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:contentDescription="Back" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/back"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:visibility="gone"
        android:contentDescription="@string/captured_image_view" />

    <RelativeLayout
        android:id="@+id/camerax_left_controls"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/camerax_bg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <RelativeLayout
            android:id="@+id/camx_splash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/button_flash"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/camera_flash"
                app:tint="@color/white"
                android:contentDescription="@string/flash_button" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/camx_layout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/camx_splash">

            <ImageView
                android:id="@+id/button_switchCam"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/camera_rotate"
                app:tint="@color/white"
                android:contentDescription="@string/switch_camera_button" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/camerax_right_controls"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/camerax_bg"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/camerax_click_layout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="#55000000">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/capture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/capture_button"
                app:tint="@color/white"
                android:contentDescription="@string/camera_button" />

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>

</RelativeLayout>